--- a/config/database.yml
+++ b/config/database.yml
@@ -14,22 +14,13 @@
 #   database: db/development.sqlite3
 
 development:
-  adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
+  url: <%= ENV['DATABASE_URL'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
+  url: <%= ENV['DATABASE_URL'] %>
 
 production:
-  adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
+  url: <%= ENV['DATABASE_URL'] %>
